--- a/.github/workflows/windows-native-build.yml
+++ b/.github/workflows/windows-native-build.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
+    - uses: ilammy/msvc-dev-cmd@v1
       with:
         msbuild-architecture: x64
     - uses: actions/checkout@v3
