--- a/native-image/src/main/resources/META-INF/native-image/proxy-config.json
+++ b/native-image/src/main/resources/META-INF/native-image/proxy-config.json
@@ -1,29 +1,4 @@
 [
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlAccessorType","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlAnyAttribute","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlAnyElement","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlElements","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlEnumValue","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlID","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlMixed","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.XmlRegistry","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  },
-  {
-    "interfaces":["jakarta.xml.bind.annotation.adapters.XmlJavaTypeAdapter","org.glassfish.jaxb.core.v2.model.annotation.Locatable"]
-  }
+  ["com.sun.jna.Library"],
+  ["com.sun.jna.Callback"]
 ]
