--- a/native-image/src/main/resources/META-INF/native-image/resource-config.json
+++ b/native-image/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,109 +1,8 @@
 {
-  "resources":{
-  "includes":[
-     {
-        "condition": {
-          "typeReachable": "com.sun.jna.Native"
-        },
-        "pattern": "\\Qcom/sun/jna/linux-aarch64/libjnidispatch.so\\E"
-      },
-      {
-        "condition": {
-          "typeReachable": "com.sun.jna.Native"
-        },
-        "pattern": "\\Qcom/sun/jna/linux-x86-64/libjnidispatch.so\\E"
-      },
-      {
-        "condition": {
-          "typeReachable": "com.sun.jna.Native"
-        },
-        "pattern": "\\Qcom/sun/jna/win32-x86-64/jnidispatch.dll\\E"
-      },
-      {
-        "condition": {
-          "typeReachable": "com.sun.jna.Native"
-        },
-        "pattern": "\\Qcom/sun/jna/darwin-aarch64/libjnidispatch.jnilib\\E"
-      },
-      {
-        "condition": {
-          "typeReachable": "com.sun.jna.Native"
-        },
-        "pattern": "\\Qcom/sun/jna/darwin-x86-64/libjnidispatch.jnilib\\E"
-      },
-    {
-      "pattern":"\\QMETA-INF/beans.xml\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/native/netty_quiche_windows_x86_64.dll\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/jakarta.enterprise.inject.se.SeContainerInitializer\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/jakarta.enterprise.inject.spi.Extension\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/jakarta.ws.rs.ext.RuntimeDelegate\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/jakarta.xml.bind.JAXBContext\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.hk2.extension.ServiceLocatorGenerator\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.jersey.internal.inject.InjectionManagerFactory\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.jersey.internal.spi.AutoDiscoverable\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.jersey.internal.spi.ForcedAutoDiscoverable\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.jersey.model.internal.spi.ParameterServiceProvider\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.glassfish.jersey.server.spi.ContainerProvider\\E"
-    }, 
-    {
-      "pattern":"\\QMETA-INF/services/org.slf4j.spi.SLF4JServiceProvider\\E"
-    }, 
-    {
-      "pattern":"\\Qapplication.properties\\E"
-    }, 
-    {
-      "pattern":"\\Qbeans_1_0.xsd\\E"
-    }, 
-    {
-      "pattern":"\\Qbeans_1_1.xsd\\E"
-    }, 
-    {
-      "pattern":"\\Qbeans_2_0.xsd\\E"
-    }, 
-    {
-      "pattern":"\\Qorg/glassfish/jersey/internal/build.properties\\E"
-    }, 
-    {
-      "pattern":"\\Qweld-build.properties\\E"
-    }, 
-    {
-      "pattern":"\\Qweld_1_1.xsd\\E"
-    }
-  ]},
-  "bundles":[
-    {
-      "name":"com.sun.org.apache.xerces.internal.impl.xpath.regex.message",
-      "locales":[""]
-    }, 
-    {
-      "name":"org.glassfish.jersey.internal.localization",
-      "locales":[""]
-    }, 
-    {
-      "name":"org.glassfish.jersey.server.internal.localization",
-      "locales":[""]
-    }
-  ]
+  "resources":[	
+    {"pattern":"\\QMETA-INF/services/jdk.vm.ci.hotspot.HotSpotJVMCIBackendFactory\\E"},
+    {"pattern":"\\QMETA-INF/services/jdk.vm.ci.services.JVMCIServiceLocator\\E"},
+    {"pattern":"\\Qcom/sun/jna/win32-x86-64/jnidispatch.dll\\E"}
+  ],
+  "bundles":[]
 }
