--- a/application/pom.xml
+++ b/application/pom.xml
@@ -236,8 +236,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
-			<scope>test</scope>
+			<version>2.11.0</version>			
 		</dependency>
 		<dependency>
 			<groupId>io.findify</groupId>
@@ -245,6 +244,16 @@
 			<version>0.2.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.unimi.dsi</groupId>
+			<artifactId>fastutil</artifactId>
+                        <version>8.5.9</version>
+                </dependency>
+		<dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                    <version>3.12.0</version>
+                </dependency>
 		<!-- Great library for analyzing modules
 		<dependency>
 			<groupId>org.burningwave</groupId>
