Introduce Ole32 support for fetching the Windows GUID via a string

--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -271,6 +271,7 @@
 						<customOptions>-g</customOptions>
 						<customOptions>-O0</customOptions>
 						<customOptions>-H:+SourceLevelDebug</customOptions>
+						<customOptions>--verbose</customOptions>
 					</customOptions>
 					<nativeImage>${localNative}</nativeImage>
 				</configuration>
