--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -13,6 +13,7 @@
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<graal.version>22.3.0</graal.version>
 		<surefireArgLine />
 	</properties>
 	<profiles>
@@ -28,13 +29,13 @@
 			<activation><os><family>Windows</family></os></activation>
 			<properties>
 				<executable.name>hedgehog</executable.name>
-                                <url>https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-22.3.0/graalvm-ce-java17-windows-amd64-22.3.0.zip</url>
+                                <url>https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${graal.version}/graalvm-ce-java17-windows-amd64-${graal.version}.zip</url>
                                 <platform>windows</platform>
                                 <unzipLocation>${basedir}\target\unziped</unzipLocation>
                                 <downloadName>graal.zip</downloadName>
                                 <downloadLocation>${basedir}\target\download/</downloadLocation>
-                                <localInstaller>${unzipLocation}\graalvm-ce-java17-22.3.0\bin\gu.cmd</localInstaller>
-                                <localNative>${unzipLocation}\graalvm-ce-java17-22.3.0\bin\native-image.cmd</localNative>
+                                <localInstaller>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\gu.cmd</localInstaller>
+                                <localNative>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\native-image.cmd</localNative>
                                 <windowsDependecies>com.sun.jna.platform.win32</windowsDependecies>
 			</properties>
 			<build>
@@ -57,6 +58,40 @@
 								</execution>
 							</executions>
 						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-antrun-plugin</artifactId>
+							<executions>
+								<execution>
+									<id>default-cli</id>
+									<phase>package</phase>
+									<goals>
+										<goal>run</goal>
+									</goals>
+									<configuration>
+										<target>
+											<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}"/>
+										</target>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>exec-maven-plugin</artifactId>
+							<executions>
+								<execution>
+									<phase>package</phase>
+									<goals>
+										<goal>exec</goal>
+									</goals>
+									<configuration>
+										<executable>${localInstaller}</executable>
+										<commandlineArgs>install native-image</commandlineArgs>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
 					</plugins>
 				</pluginManagement>
 			</build>
@@ -73,12 +108,12 @@
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
 			<artifactId>graal-sdk</artifactId>
-			<version>22.3.0</version>
+			<version>${graal.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.graalvm.nativeimage</groupId>
 			<artifactId>svm</artifactId>
-			<version>22.3.0</version>
+			<version>${graal.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
@@ -198,50 +233,19 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<id>default-cli</id>
-						<phase>package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<target>
-								<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}"/>
-								<!--<exec executable="cmd">
-								    <arg value="/c"/>
-								    <arg value="${localInstaller}"/>
-								    <arg value="install native-image"/>
-								</exec>-->
-							</target>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>exec-maven-plugin</artifactId>
-                            <version>3.1.0</version>
-                            <executions>
-                                <execution>
-                                    <phase>package</phase>
-                                    <goals>
-                                        <goal>exec</goal>
-                                    </goals>
-                                    <configuration>
-                                        <executable>${localInstaller}</executable>
-                                        <commandlineArgs>install native-image</commandlineArgs>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.geronimo.arthur</groupId>
 				<artifactId>arthur-maven-plugin</artifactId>
 				<version>1.0.5</version>
 				<configuration>
 					<main>org.unigrid.hedgehog.nativeimage.NativeImage</main>
-					<graalVersion>22.3.0.r17</graalVersion>
+					<graalVersion>${graal.version}.r17</graalVersion>
 					<allowIncompleteClasspath>true</allowIncompleteClasspath>
 					<classpath>
 						<classpath>${org.unigrid.hedgehog:hedgehog-common:jar}</classpath>
@@ -254,8 +258,6 @@
 						<classpath>${org.slf4j:slf4j-api:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-core:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-classic:jar}</classpath>
-						<classpath>${net.java.dev.jna:jna-platform:jar}</classpath>
-						<classpath>${net.java.dev.jna:jna:jar}</classpath>
 					</classpath>
 					<otherFiles>
 						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
@@ -268,10 +270,6 @@
 						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted.c=ALL-UNNAMED</customOption>
 						<customOption>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</customOption>
 						<customOption>-H:IncludeResources=application.properties</customOption>
-						<customOptions>-g</customOptions>
-						<customOptions>-O0</customOptions>
-						<customOptions>-H:+SourceLevelDebug</customOptions>
-						<customOptions>--verbose</customOptions>
 					</customOptions>
 					<nativeImage>${localNative}</nativeImage>
 				</configuration>
@@ -337,7 +335,6 @@
 						<ruleset>${project.basedir}/pmd.xml</ruleset>
 					</rulesets>
 				</configuration>
-
 			</plugin>
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
