--- a/.github/workflows/windows-native-build.yml
+++ b/.github/workflows/windows-native-build.yml
@@ -1,10 +1,7 @@
-name: Java CI with Maven
+name: Build Windows (amd64) Executable
 
 on:
   workflow_dispatch:
-    inputs:
-      logLevel:
-        default: 'warning'
 
 jobs:
   build:
@@ -18,7 +15,7 @@ jobs:
       with:
         msbuild-architecture: x64
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
