Re-add JNA to the native compile classpath
Windows native won't build without it. This should be fine, as GraalVM
will strip any unused classes away.

--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -258,6 +258,8 @@
 						<classpath>${org.slf4j:slf4j-api:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-core:jar}</classpath>
 						<classpath>${ch.qos.logback:logback-classic:jar}</classpath>
+						<classpath>${net.java.dev.jna:jna-platform:jar}</classpath>
+						<classpath>${net.java.dev.jna:jna:jar}</classpath>
 					</classpath>
 					<otherFiles>
 						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
