--- a/.github/workflows/osx-native-build.yml
+++ b/.github/workflows/osx-native-build.yml
@@ -17,7 +17,21 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn package
+      run: |
+        echo "/Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/Home/bin/" >> $GITHUB_PATH
+        echo "GRAALVM_HOME=/Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/Home/" >> $GITHUB_ENV
+        mvn package
+    - name: Misc
+      if: always()
+      run: |
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/Home/
+        ls -l /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/Home/bin/
+        /Users/runner/work/hedgehog/hedgehog/native-image/target/untarred/graalvm-ce-java17-22.3.0/Contents/Home/bin/gu
+        gu
     - name: Output artifact
       uses: actions/upload-artifact@v3
       with:
