As the last step, also run the binary in the Linux build action

--- a/.github/workflows/linux-native-build.yml
+++ b/.github/workflows/linux-native-build.yml
@@ -23,3 +23,5 @@ jobs:
       with:
         name: Linux Native Binary
         path: native-image/target/hedgehog.bin
+    - name: Run Binary
+      run: native-image/target/hedgehog.bin
