Enable Java assertions during testing

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -353,6 +353,7 @@
 					<systemPropertyVariables>
 						<testoutput.target>${project.build.directory}</testoutput.target>
 					</systemPropertyVariables>
+					<enableAssertions>true</enableAssertions>
 				</configuration>
 			</plugin>
 			<plugin>
