--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<surefireArgLine />
 	</properties>
+	<scm>
+		<developerConnection>scm:git:https://github.com/unigrid-project/hedgehog.git</developerConnection>
+	</scm>
 	<modules>
 		<module>application</module>
 		<module>common</module>
@@ -42,6 +45,16 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>3.0.0</version>
+					<configuration>
+						<tagNameFormat>v@{project.version}</tagNameFormat>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
+						<dryRun>${dryRun}</dryRun>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
