Add the ability to skip test suite during workflow execution

--- a/.github/workflows/linux-native-build.yml
+++ b/.github/workflows/linux-native-build.yml
@@ -2,6 +2,10 @@ name: Build Linux (amd64) Executable
 
 on:
   workflow_dispatch:
+    inputs:
+      skip-tests:
+        type: boolean
+        description: Skip Test Suite
 
 jobs:
   build:
@@ -17,7 +21,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn package
+      run: mvn package -DskipTests=${{ inputs.skip-tests }}
     - name: Output artifact
       uses: actions/upload-artifact@v3
       with:
