--- a/native-image/pom.xml
+++ b/native-image/pom.xml
@@ -1,15 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>Unigrid Hedgehog Native Image</name>
 	<groupId>org.unigrid.hedgehog</groupId>
 	<artifactId>hedgehog-native</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.unigrid.hedgehog</groupId>
 		<artifactId>hedgehog-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -71,7 +70,7 @@
 									</goals>
 									<configuration>
 										<target>
-											<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}"/>
+											<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}" />
 										</target>
 									</configuration>
 								</execution>
@@ -124,12 +123,12 @@
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
 			<artifactId>hedgehog</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
 			<artifactId>hedgehog-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
