--- a/application/pom.xml
+++ b/application/pom.xml
@@ -3,12 +3,12 @@
 	<name>Unigrid Hedgehog</name>
 	<groupId>org.unigrid.hedgehog</groupId>
 	<artifactId>hedgehog</artifactId>
-	<version>0.0.6</version>
+	<version>0.0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.unigrid.hedgehog</groupId>
 		<artifactId>hedgehog-parent</artifactId>
-		<version>0.0.6</version>
+		<version>0.0.7-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
 			<artifactId>hedgehog-common</artifactId>
-			<version>0.0.6</version>
+			<version>0.0.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
